@@ -2,7 +2,7 @@
 .\"
 .\" Copyright © 1996 Michael Shields <shields@crosslink.net>
 .\" Copyright © 2006 Frank Lichtenheld <djpig@debian.org>
-.\" Copyright © 2007 Guillem Jover <guillem@debian.org>
+.\" Copyright © 2007, 2009, 2011-2014 Guillem Jover <guillem@debian.org>
 .\" Copyright © 2009 Raphaël Hertzog <hertzog@debian.org>
 .\"
 .\" This is free software; you can redistribute it and/or modify
@@ -88,6 +88,11 @@ for more information on its format.
 .BR \-a ", " \-\-arch " \fIarch\fP"
 Use a pattern consisting of \fI*_all.deb\fP and \fI*_arch.deb\fP instead of
 scanning for all debs.
+.TP
+.BR \-h ", " \-\-hash " \fIhash-list\fP"
+Only generate file hashes for the comma-specified list specified.
+The default is to generate all currently supported hashes.
+Supported values: \fBmd5\fP, \fBsha1\fP, \fBsha256\fP.
 .TP
 .BR \-m ", " \-\-multiversion
 Include all found packages in the output.
