@@ -94,6 +94,8 @@ dpkg (1.17.14) UNRELEASED; urgency=low
   * Do not pipe the files to sign from dpkg-buildpackage to GnuPG. When GnuPG
     uses the gpg-agent it is unable to detect the correct tty configuration
     if stdin is a pipe instead of the current terminal. Closes: #762391
+  * Add a new --hash option to enable generating only specific file checksums
+    in dpkg-scanpackages. Requested by Thorsten Glaser <tg@debian.org>.
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
